--- a/Book/app/src/main/res/layout/activity_main.xml
+++ b/Book/app/src/main/res/layout/activity_main.xml
@@ -32,19 +32,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <Button
+    <ImageButton
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/last_button"
-        android:drawableEnd="@drawable/arrow_left"
-        android:drawablePadding="4dp" />
-    <Button
+        android:src="@drawable/arrow_left"
+        android:contentDescription="TODO" />
+    <ImageButton
         android:id="@+id/last_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next_button"
-        android:drawableEnd="@drawable/arrow_right"
-        android:drawablePadding="4dp" />
+        android:src="@drawable/arrow_right"
+        android:contentDescription="TODO" />
     </LinearLayout>
 </LinearLayout>
